# minimal-python-project

./: .pre-commit-config.yaml  Makefile  README.md  requirements-dev.txt  setup.cfg
src/: main.py  main_test.py
