[metadata]
name = minimal_python_project
version = 0.0.1
description = A template repository for a really simple
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/markdouthwaite/minimal-python-project
author = Mark Douthwaite
author_email = mark@douthwaite.io
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
packages = find:
python_requires = >=3.7

[options.packages.find]
exclude =
    tests*
    testing*

[bdist_wheel]
universal = True
